2009-05-24  Dan Bernstein  <mitz@apple.com>

        - revert an accidental change from r43964.

        * WebView/WebView.mm:
        (+[WebView _setShouldUseFontSmoothing:]):

2009-05-24  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein and Tim Hatcher.

        <rdar://problem/6913045> New console message spewed by automator CLI after installing JetstreamLeo40B21a

        * Misc/WebNSObjectExtras.mm:
        (-[WebMainThreadInvoker initWithTarget:]): Tweaked argument name.
        (-[WebMainThreadInvoker forwardInvocation:]): Removed call to retainArguments.
        This was unneeded and in the case of a newly created but not yet fully initialized
        NSView object it caused the abovementioned bug.
        (-[WebMainThreadInvoker handleException:]): Tweaked argument name. Added assertion.
        (-[NSInvocation _webkit_invokeAndHandleException:]): Tweaked name of local variable
        that holds the exception.

2009-05-23  David Kilzer  <ddkilzer@apple.com>

        Part 2 of 2: Bug 25495: Implement PassOwnPtr and replace uses of std::auto_ptr

        <https://bugs.webkit.org/show_bug.cgi?id=25495>

        Reviewed by Oliver Hunt.

        * History/WebHistory.mm:
        (-[WebHistory _visitedURL:withTitle:method:wasFailure:]): Return
        0 instead of an empty auto_ptr<>.
        * History/WebHistoryItem.mm:
        (-[WebHistoryItem initFromDictionaryRepresentation:]): Use
        OwnPtr<> instead of auto_ptr<> for stack variable.
        * WebCoreSupport/WebChromeClient.h:
        (WebChromeClient::createHTMLParserQuirks): Return a PassOwnPtr<>
        instead of a raw HTMLParserQuirks pointer.

2009-05-23  David Kilzer  <ddkilzer@apple.com>

        Part 1 of 2: Bug 25495: Implement PassOwnPtr and replace uses of std::auto_ptr

        <https://bugs.webkit.org/show_bug.cgi?id=25495>

        Reviewed by Oliver Hunt.

        * ForwardingHeaders/wtf/OwnPtrCommon.h: Added.
        * ForwardingHeaders/wtf/PassOwnPtr.h: Added.
